--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<h1>kodluyoruz - front-end</h1>
-<!--acıklama yazildı-->
-<h2>Html</h2>
-<h3>Açıklamalarla çalışmak</h3>   
-<p>Selamın aleyküm</p>
-<p>Selam2</p>
-<h3>başlıklar ve paragraflarla çalışmak</h3>
-<h2>CSS</h2>
-<h2>Bootstrap</h2> 
+<html>
+    <h1>Çağlar Gici</h1>
+    <h3>Hakkımda</h3>
+    <p>Ben Çağalr, İç mimarlık öğrencisiyim.</p>
+    <h2>Kullandığım üç boyutlu programlar</h2>
+    <h3>sketchup</h3>
+    <p>Modelleme için kullandıgım program </p>
+</html>
