--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <h3>Hakkımda</h3>
     <p>Ben Çağalr, İç mimarlık öğrencisiyim.</p>
     <h2>Kullandığım üç boyutlu programlar</h2>
+    <!--Birden fazla ama sadece bir tanesini yazacagım-->
     <h3>sketchup</h3>
     <p>Modelleme için kullandıgım program </p>
 </html>
