--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
     <h3>Hakkımda</h3>
     <p>Ben Çağalr, İç mimarlık öğrencisiyim.</p>
     <h2>Kullandığım üç boyutlu programlar</h2>
+    <ol type="I">
+        <li>Sketchup</li>
+        <ul><li>modelleme</li></ul>
+        <li>rhino</li>
+        <ul><li>modelleme</li></ul>
+    </ol>
     <!--Birden fazla ama sadece bir tanesini yazacagım-->
     <h3>sketchup</h3>
     <p>Modelleme için kullandıgım program </p>
-</html>
+</html> 
